@@ -93,4 +93,4 @@ function(factory){"function"==typeof define&&define.amd?define(["jquery"],factor
  */
 function(factory){"function"==typeof define&&define.amd?define(["jquery","./core","./widget","./position"],factory):factory(jQuery)}(function($){return $.widget("ui.tooltip",{version:"1.11.4",options:{content:function(){var title=$(this).attr("title")||"";return $("<a>").text(title).html()},hide:!0,items:"[title]:not([disabled])",position:{my:"left top+15",at:"left bottom",collision:"flipfit flip"},show:!0,tooltipClass:null,track:!1,close:null,open:null},_addDescribedBy:function(elem,id){var describedby=(elem.attr("aria-describedby")||"").split(/\s+/);describedby.push(id),elem.data("ui-tooltip-id",id).attr("aria-describedby",$.trim(describedby.join(" ")))},_removeDescribedBy:function(elem){var id=elem.data("ui-tooltip-id"),describedby=(elem.attr("aria-describedby")||"").split(/\s+/),index=$.inArray(id,describedby);-1!==index&&describedby.splice(index,1),elem.removeData("ui-tooltip-id"),describedby=$.trim(describedby.join(" ")),describedby?elem.attr("aria-describedby",describedby):elem.removeAttr("aria-describedby")},_create:function(){this._on({mouseover:"open",focusin:"open"}),this.tooltips={},this.parents={},this.options.disabled&&this._disable(),this.liveRegion=$("<div>").attr({role:"log","aria-live":"assertive","aria-relevant":"additions"}).addClass("ui-helper-hidden-accessible").appendTo(this.document[0].body)},_setOption:function(key,value){var that=this;return"disabled"===key?(this[value?"_disable":"_enable"](),void(this.options[key]=value)):(this._super(key,value),void("content"===key&&$.each(this.tooltips,function(id,tooltipData){that._updateContent(tooltipData.element)})))},_disable:function(){var that=this;$.each(this.tooltips,function(id,tooltipData){var event=$.Event("blur");event.target=event.currentTarget=tooltipData.element[0],that.close(event,!0)}),this.element.find(this.options.items).addBack().each(function(){var element=$(this);element.is("[title]")&&element.data("ui-tooltip-title",element.attr("title")).removeAttr("title")})},_enable:function(){this.element.find(this.options.items).addBack().each(function(){var element=$(this);element.data("ui-tooltip-title")&&element.attr("title",element.data("ui-tooltip-title"))})},open:function(event){var that=this,target=$(event?event.target:this.element).closest(this.options.items);target.length&&!target.data("ui-tooltip-id")&&(target.attr("title")&&target.data("ui-tooltip-title",target.attr("title")),target.data("ui-tooltip-open",!0),event&&"mouseover"===event.type&&target.parents().each(function(){var blurEvent,parent=$(this);parent.data("ui-tooltip-open")&&(blurEvent=$.Event("blur"),blurEvent.target=blurEvent.currentTarget=this,that.close(blurEvent,!0)),parent.attr("title")&&(parent.uniqueId(),that.parents[this.id]={element:this,title:parent.attr("title")},parent.attr("title",""))}),this._registerCloseHandlers(event,target),this._updateContent(target,event))},_updateContent:function(target,event){var content,contentOption=this.options.content,that=this,eventType=event?event.type:null;return"string"==typeof contentOption?this._open(event,target,contentOption):(content=contentOption.call(target[0],function(response){that._delay(function(){target.data("ui-tooltip-open")&&(event&&(event.type=eventType),this._open(event,target,response))})}),void(content&&this._open(event,target,content)))},_open:function(event,target,content){function position(event){positionOption.of=event,tooltip.is(":hidden")||tooltip.position(positionOption)}var tooltipData,tooltip,delayedShow,a11yContent,positionOption=$.extend({},this.options.position);if(content){if(tooltipData=this._find(target))return void tooltipData.tooltip.find(".ui-tooltip-content").html(content);target.is("[title]")&&(event&&"mouseover"===event.type?target.attr("title",""):target.removeAttr("title")),tooltipData=this._tooltip(target),tooltip=tooltipData.tooltip,this._addDescribedBy(target,tooltip.attr("id")),tooltip.find(".ui-tooltip-content").html(content),this.liveRegion.children().hide(),content.clone?(a11yContent=content.clone(),a11yContent.removeAttr("id").find("[id]").removeAttr("id")):a11yContent=content,$("<div>").html(a11yContent).appendTo(this.liveRegion),this.options.track&&event&&/^mouse/.test(event.type)?(this._on(this.document,{mousemove:position}),position(event)):tooltip.position($.extend({of:target},this.options.position)),tooltip.hide(),this._show(tooltip,this.options.show),this.options.show&&this.options.show.delay&&(delayedShow=this.delayedShow=setInterval(function(){tooltip.is(":visible")&&(position(positionOption.of),clearInterval(delayedShow))},$.fx.interval)),this._trigger("open",event,{tooltip:tooltip})}},_registerCloseHandlers:function(event,target){var events={keyup:function(event){if(event.keyCode===$.ui.keyCode.ESCAPE){var fakeEvent=$.Event(event);fakeEvent.currentTarget=target[0],this.close(fakeEvent,!0)}}};target[0]!==this.element[0]&&(events.remove=function(){this._removeTooltip(this._find(target).tooltip)}),event&&"mouseover"!==event.type||(events.mouseleave="close"),event&&"focusin"!==event.type||(events.focusout="close"),this._on(!0,target,events)},close:function(event){var tooltip,that=this,target=$(event?event.currentTarget:this.element),tooltipData=this._find(target);return tooltipData?(tooltip=tooltipData.tooltip,void(tooltipData.closing||(clearInterval(this.delayedShow),target.data("ui-tooltip-title")&&!target.attr("title")&&target.attr("title",target.data("ui-tooltip-title")),this._removeDescribedBy(target),tooltipData.hiding=!0,tooltip.stop(!0),this._hide(tooltip,this.options.hide,function(){that._removeTooltip($(this))}),target.removeData("ui-tooltip-open"),this._off(target,"mouseleave focusout keyup"),target[0]!==this.element[0]&&this._off(target,"remove"),this._off(this.document,"mousemove"),event&&"mouseleave"===event.type&&$.each(this.parents,function(id,parent){$(parent.element).attr("title",parent.title),delete that.parents[id]}),tooltipData.closing=!0,this._trigger("close",event,{tooltip:tooltip}),tooltipData.hiding||(tooltipData.closing=!1)))):void target.removeData("ui-tooltip-open")},_tooltip:function(element){var tooltip=$("<div>").attr("role","tooltip").addClass("ui-tooltip ui-widget ui-corner-all ui-widget-content "+(this.options.tooltipClass||"")),id=tooltip.uniqueId().attr("id");return $("<div>").addClass("ui-tooltip-content").appendTo(tooltip),tooltip.appendTo(this.document[0].body),this.tooltips[id]={element:element,tooltip:tooltip}},_find:function(target){var id=target.data("ui-tooltip-id");return id?this.tooltips[id]:null},_removeTooltip:function(tooltip){tooltip.remove(),delete this.tooltips[tooltip.attr("id")]},_destroy:function(){var that=this;$.each(this.tooltips,function(id,tooltipData){var event=$.Event("blur"),element=tooltipData.element;event.target=event.currentTarget=element[0],that.close(event,!0),$("#"+id).remove(),element.data("ui-tooltip-title")&&(element.attr("title")||element.attr("title",element.data("ui-tooltip-title")),element.removeData("ui-tooltip-title"))}),this.liveRegion.remove()}})}),/*! */
 /*! Minaraad */
-function(){"use strict";$(function(){$(Faceted.Events).bind(Faceted.Events.AJAX_QUERY_SUCCESS,function(evt){setTimeout(function(){$(".masonry").masonry()},200)}),$(Faceted.Events).bind(Faceted.Events.AJAX_QUERY_SUCCESS,function(evt){setTimeout(function(){$(".masonry").masonry()},1e3)});var owner=$("#owner"),drawer=$("#drawer");$("html body");$(owner).find("a.more").click(function(){return $(owner).hide("fast"),$(drawer).slideDown("slow"),$("html, body").animate({scrollTop:$(document).height()},"slow"),!1}),$(drawer).find("a.less").click(function(){return $(drawer).hide("fast"),$(owner).slideDown("fast"),!1}),$(".btn-search").click(function(){$(".search").slideToggle("fast",function(){$(".form-control").focus()})}),setTimeout(function(){$("#login_link a").tooltip({position:{my:"center bottom-20",at:"center top",using:function(position,feedback){$(this).css(position),$("<div>").addClass("arrow").addClass(feedback.vertical).addClass(feedback.horizontal).appendTo(this)}},show:{easing:"easeInExpo",duration:800}})},400),setTimeout(function(){$(".masonry").masonry({itemSelector:".grid-item",columnWidth:".grid-item",percentPosition:!0})},200);var common_content_filter=$.plonepopups.common_content_filter;$("#mailchimp_link a").prepOverlay({subtype:"ajax",filter:common_content_filter}),$("#newsletter-mailchimp_link a").prepOverlay({subtype:"ajax",filter:common_content_filter}),$("#login_link a").prepOverlay({subtype:"ajax",filter:common_content_filter})}),$(function($){if("undefined"!=typeof event_attendees){var cookie=$.cookie("minaraad_attendee");if(cookie){'"'===cookie[0]&&(cookie=cookie.slice(1)),'"'===cookie[cookie.length-1]&&(cookie=cookie.slice(0,cookie.length-1));var cookie_parts=cookie.split("#");if(5===cookie_parts.length){var hexdigest=cookie_parts[0];if(32===hexdigest.length){for(var subscribed=!1,index=0;index<event_attendees.length;index++)if(event_attendees[index]===hexdigest){subscribed=!0;break}subscribed?($("#inschrijven").hide(),$("#subscribe_button").hide(),$("#unsubscribe_button").show()):($("#firstname").attr("value")||$("#firstname").attr("value",cookie_parts[1]),$("#lastname").attr("value")||$("#lastname").attr("value",cookie_parts[2]),$("#email").attr("value")||$("#email").attr("value",cookie_parts[3]),$("#work").attr("value")||$("#work").attr("value",cookie_parts[4]))}}}}}),$(function($){var dest,content,location,stack,oltoc,numdigits,wlh,target,targetOffset;if(dest=$("nav.toc section.nav-list div.nav-items"),content=$(".container article:first"),content&&dest.length&&(dest.empty(),location=window.location.href,window.location.hash&&(location=location.substring(0,location.lastIndexOf(window.location.hash))),stack=[],$(content).find("*").not(".comment > h3").filter(function(){return/^h[1234]$/.test(this.tagName.toLowerCase())}).not(".documentFirstHeading").each(function(i){var level,ol,li;for(level=this.nodeName.charAt(1);stack.length<level;)ol=$("<ul>"),stack.length&&(li=$(stack[stack.length-1]).children("li:last"),li.length||(li=$("<li>").appendTo($(stack[stack.length-1]))),li.append(ol)),stack.push(ol);for(;stack.length>level;)stack.pop();$(this).before($('<a name="section-'+i+'" />')),$("<li>").append($("<a />").attr("href",location+"#section-"+i).text($(this).text())).appendTo($(stack[stack.length-1]))}),stack.length)){var oltoc=$(stack[0]),i=1;i<=stack.length&&$("nav.toc").show(),numdigits=oltoc.children().length.toString().length,oltoc.addClass("TOC"+numdigits+"Digit"),dest.append(oltoc),wlh=window.location.hash,wlh&&(target=$(wlh),target=target.length&&target||$('[name="'+wlh.slice(1)+'"]'),targetOffset=target.offset(),targetOffset&&$("html,body").animate({scrollTop:targetOffset.top},0))}})}();
+function(){"use strict";$(function(){$(Faceted.Events).bind(Faceted.Events.AJAX_QUERY_SUCCESS,function(evt){setTimeout(function(){$(".masonry").masonry()},200)}),$(Faceted.Events).bind(Faceted.Events.AJAX_QUERY_SUCCESS,function(evt){setTimeout(function(){$(".masonry").masonry()},1e3)});var owner=$("#owner"),drawer=$("#drawer");$("html body");$(owner).find("a.more").click(function(){return $(owner).hide("fast"),$(drawer).slideDown("slow"),$("html, body").animate({scrollTop:$(document).height()},"slow"),!1}),$(drawer).find("a.less").click(function(){return $(drawer).hide("fast"),$(owner).slideDown("fast"),!1}),$(".btn-search").click(function(){$(".search").slideToggle("fast",function(){$(".form-control").focus()})}),setTimeout(function(){var login_link=$("#login_link a");login_link.click(function(){$(".ui-tooltip").remove()}),login_link.tooltip({position:{my:"center bottom-20",at:"center top",using:function(position,feedback){$(this).css(position),$("<div>").addClass("arrow").addClass(feedback.vertical).addClass(feedback.horizontal).appendTo(this)}},show:{easing:"easeInExpo",duration:800}})},400),setTimeout(function(){$(".masonry").masonry({itemSelector:".grid-item",columnWidth:".grid-item",percentPosition:!0})},200);var common_content_filter=$.plonepopups.common_content_filter;$("#mailchimp_link a").prepOverlay({subtype:"ajax",filter:common_content_filter}),$("#newsletter-mailchimp_link a").prepOverlay({subtype:"ajax",filter:common_content_filter}),$("#login_link a").prepOverlay({subtype:"ajax",filter:common_content_filter})}),$(function($){if("undefined"!=typeof event_attendees){var cookie=$.cookie("minaraad_attendee");if(cookie){'"'===cookie[0]&&(cookie=cookie.slice(1)),'"'===cookie[cookie.length-1]&&(cookie=cookie.slice(0,cookie.length-1));var cookie_parts=cookie.split("#");if(5===cookie_parts.length){var hexdigest=cookie_parts[0];if(32===hexdigest.length){for(var subscribed=!1,index=0;index<event_attendees.length;index++)if(event_attendees[index]===hexdigest){subscribed=!0;break}subscribed?($("#inschrijven").hide(),$("#subscribe_button").hide(),$("#unsubscribe_button").show()):($("#firstname").attr("value")||$("#firstname").attr("value",cookie_parts[1]),$("#lastname").attr("value")||$("#lastname").attr("value",cookie_parts[2]),$("#email").attr("value")||$("#email").attr("value",cookie_parts[3]),$("#work").attr("value")||$("#work").attr("value",cookie_parts[4]))}}}}}),$(function($){var dest,content,location,stack,oltoc,numdigits,wlh,target,targetOffset;if(dest=$("nav.toc section.nav-list div.nav-items"),content=$(".container article:first"),content&&dest.length&&(dest.empty(),location=window.location.href,window.location.hash&&(location=location.substring(0,location.lastIndexOf(window.location.hash))),stack=[],$(content).find("*").not(".comment > h3").filter(function(){return/^h[1234]$/.test(this.tagName.toLowerCase())}).not(".documentFirstHeading").each(function(i){var level,ol,li;for(level=this.nodeName.charAt(1);stack.length<level;)ol=$("<ul>"),stack.length&&(li=$(stack[stack.length-1]).children("li:last"),li.length||(li=$("<li>").appendTo($(stack[stack.length-1]))),li.append(ol)),stack.push(ol);for(;stack.length>level;)stack.pop();$(this).before($('<a name="section-'+i+'" />')),$("<li>").append($("<a />").attr("href",location+"#section-"+i).text($(this).text())).appendTo($(stack[stack.length-1]))}),stack.length)){var oltoc=$(stack[0]),i=1;i<=stack.length&&$("nav.toc").show(),numdigits=oltoc.children().length.toString().length,oltoc.addClass("TOC"+numdigits+"Digit"),dest.append(oltoc),wlh=window.location.hash,wlh&&(target=$(wlh),target=target.length&&target||$('[name="'+wlh.slice(1)+'"]'),targetOffset=target.offset(),targetOffset&&$("html,body").animate({scrollTop:targetOffset.top},0))}})}();
